- wordpress-php-info: Upgraded from version 14.12 to version 15
- mu-common: Deactivate pingback to avoid attacks to other sites (Trello #1275)
- mu-common: Removed fix for post thumbnails broken due to upgrading to WP 4.4. No longer necessary in WP 4.5
- buddypress-docs: Suggest labels when adding new documents (Trello #1228)


Changes 16.05.03
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.4.3 (Trello #1176)
- Reactor: Fixed bug with right column size if only right column is enabled (Trello #1185)
- Reactor: Fixed bug with icon in last card (Trello #1187)
- Reactor: Fixed bug getting multiple categories posts from URL (Trello #1142)
- Reactor: Minor improvements in CSS
- Reactor: Added three color palettes (GitHub #275)
- Reactor: Fixed line-height in default WordPress formats, used by imported posts (GitHub #412)
- Reactor: Added description link (Trello #1218)
- reactor-serveis-educatius: Options of depth 0 in menu don't break in two lines if they're long
- Disabled asynchronous default cron because there's an hourly system cron (Trello #1112)
- Added embed, iframe and script support in kses (Trello #1182)
- Hidden options in Settings menu (Trello #1219)
- Fixed bug with searching members or groups box (Trello #1216)
- xtec-ldap-login: Any existing user whose e-mail is XTEC, will always log in through LDAP if it is activated (Trello #1105)
- agora-functions: Avoid delete page_on_front because front page is not shown if it doesn't exist (Trello #1178)
- agora-functions: Replace template if front-page page is not using correct one (Trello #1178)
- xtec-mailer: Displayed reply-to parameter for admins to allow them to change it (Trello #1206)
- xtec-mailer: Taken Reply-to from headers if specified (Trello #1206)
- xtec-mailer: Compress log files to zip
- enllacos-educatius: Changed xtec.cat to xtec.gencat.cat (Trello #1207)